# borg

./: .envrc  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  chapter_1.html  chapter_2.html  cliff.toml  justfile  print.html
.direnv/aliases/: coderun
.github/workflows/: book.yml  build.yml  release.yml
book/: book.toml
book/book/: searchindex.json
book/src/: chapter_1.md  chapter_2.md
docs/: 404.html  chapter_1.html  chapter_2.html  index.html  print.html  searchindex.js  searchindex.json
src/: main.rs
src/arguments/: daemon.rs  frame.rs  interface.rs  mod.rs  node.rs  param.rs  service.rs  topic.rs  work.rs
src/cli/: action.rs  bag.rs  borg.rs  builder.rs  daemon.rs  derive.rs  frame.rs  interface.rs  launch.rs  middleware.rs  mod.rs  node.rs  param.rs  run.rs  service.rs  topic.rs  utils.rs  work.rs
src/commands/: borg.rs  mod.rs
src/commands/action/: goal.rs  info.rs  list.rs  main.rs  mod.rs
src/commands/interface/: all.rs  list.rs  mod.rs  model.rs  package.rs  show.rs
src/commands/node/: info.rs  list.rs  mod.rs
src/commands/param/: describe.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  remove.rs  set.rs
src/commands/service/: call.rs  find.rs  kind.rs  list.rs  mod.rs
src/commands/topic/: bw.rs  delay.rs  echo.rs  find.rs  hz.rs  kind.rs  list.rs  mod.rs  pub_.rs
