[package]
name = "roc_ros"
version = "0.1.28"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line tool for ROS2"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "roc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
getset = "0.1.2"
colored = "2.0.4"
